--- a/lab-4-student.qmd
+++ b/lab-4-student.qmd
@@ -65,12 +65,34 @@ ca_childcare <- counties |>
 **3. Using a function from the `forcats` package, complete the code below to create a new variable where each county is categorized into one of the [10 Census regions](https://census.ca.gov/regions/) in California. Use the Region description (from the plot), not the Region number.**  
 *Hint: This is probably a good place to use ChatGPT to reduce on tedious work. But you do need to know how to prompt ChatGPT to make it useful!*
 
+#### <span style="color:pink;">Author Contribution (me)</span>
+
+#### Chat GPT Prompt
+
+> " Can you help me write R code to assign California counties to specific regions using fct_collapse in mutate? Here are the regions and the counties for each:
+> Regions:
+> Superior California, North Coast, San Francisco Bay Area, Northern San Joaquin Valley, Central Coast, Southern San Joaquin Valley, Inland Empire, Los Angeles County, Orange County, San Diego-Imperial
+> Counties:
+> Butte, Colusa, El Dorado, Glenn, Lassen, Modoc, Nevada, Placer, Plumas, Sacramento, Shasta, Sierra, Siskiyou, Sutter, Tehama, Yolo, Yuba, Del Norte, Humboldt, Lake, Mendocino, Napa, Sonoma, Trinity, Alameda, Contra Costa, Marin, San Francisco, San Mateo, Santa Clara, Solano, Alpine, Amador, Calaveras, Madera, Mariposa, Merced, Mono, San Joaquin, Stanislaus, Tuolumne, Monterey, San Benito, San Luis Obispo, Santa Barbara, Santa Cruz, Ventura, Fresno, Inyo, Kern, Kings, Tulare, Riverside, San Bernardino, Los Angeles, Orange, Imperial, San Diego "
+
 ```{r}
 #| label: recoding-county-to-census-regions
 
 ca_childcare <- ca_childcare |> 
   mutate(county_name = str_remove(county_name, " County")) |>
-  ...
+  mutate(county_name = fct(county_name)) |>
+  mutate(Region = fct_collapse(county_name,
+                               "Superior California" = c("Butte", "Colusa", "El Dorado", "Glenn", "Lassen", "Modoc", "Nevada", "Placer", "Plumas", "Sacramento", "Shasta", "Sierra", "Siskiyou", "Sutter", "Tehama", "Yolo", "Yuba"),
+                               "North Coast" = c("Del Norte", "Humboldt", "Lake", "Mendocino", "Napa", "Sonoma", "Trinity"),
+                               "San Francisco Bay Area" = c("Alameda", "Contra Costa", "Marin", "San Francisco", "San Mateo", "Santa Clara", "Solano"),
+                               "Northern San Joaquin Valley" = c("Alpine", "Amador", "Calaveras", "Madera", "Mariposa", "Merced", "Mono", "San Joaquin", "Stanislaus", "Tuolumne"),
+                               "Central Coast" = c("Monterey", "San Benito", "San Luis Obispo", "Santa Barbara", "Santa Cruz", "Ventura"),
+                               "Southern San Joaquin Valley" = c("Fresno", "Inyo", "Kern", "Kings", "Tulare"),
+                               "Inland Empire" = c("Riverside", "San Bernardino"),
+                               "Los Angeles County" = c("Los Angeles"),
+                               "Orange County" = c("Orange"),
+                               "San Diego-Imperial" = c("Imperial", "San Diego")
+                               ))
 ```
 
 
