--- a/lab-4-student.qmd
+++ b/lab-4-student.qmd
@@ -130,9 +130,9 @@ median_table <- ca_childcare |>
 
 median_infants <- ca_childcare |>
   filter(study_year %in% "2018") |>
-  select(mc_infant, Region, study_year) |>
+  select(mfcc_infant, Region, study_year) |>
   group_by(Region, study_year) |>
-  summarise(median_infant = median(mc_infant)) |>
+  summarise(median_infant = median(mfcc_infant)) |>
   pivot_wider(names_from = study_year, 
               values_from = median_infant)
 
@@ -152,22 +152,41 @@ median_infants |>
 
 ![Plot to recreate](https://atheobold.github.io/groupworthy-data-science/labs/instructions/images/lab-4-recreate-plot.png)
 
+#### <span style="color:pink;">Author Contribution (me)</span>
+
 ```{r}
 #| label: recreate-plot
 
-ggplot(ca_childcare_long, aes(x = study_year, 
-                              y = `2018`, 
-                              color = Region)) +
+median_childcare <- ca_childcare |>
+  select(mfcc_preschool, 
+         mfcc_toddler, 
+         mfcc_infant, 
+         Region, 
+         study_year) |>
+  group_by(Region, study_year) |>
+  summarise(median_infant = median(mfcc_infant),
+            median_toddler = median(mfcc_toddler),
+            median_pre = median(mfcc_preschool)) |>
+  pivot_longer(cols = c(median_infant, 
+                        median_toddler, 
+                        median_pre), 
+               names_to = "childcare_type", 
+               values_to = "price")
+
+
+ggplot(median_childcare, aes(x = study_year,
+                             y = childcare_type,
+                             color = Region)) +
   geom_line() +
-  geom_smooth(method = "loess", se = TRUE, aes(group = childcare_type), color = "black") +  # Add loess smoother
-  facet_wrap(~ childcare_type, scales = "free_y", nrow = 3) +  # Facets for each childcare type
-  scale_x_continuous(breaks = c(2008, 2018)) +  # Set x-axis breaks
-  labs(
-    title = "Change in Full-Time Median Price for Center-Based Childcare",
-    x = "Study Year",
-    y = "Median Price",
-    color = "Region"
-  )
+  geom_smooth(method = "loess",
+              aes(group = childcare_type)) +  
+  facet_wrap(~ childcare_type, 
+             scales = "free_y", 
+             nrow = 3) + 
+  labs(title = "Change in Full-Time Median Price for Center-Based Childcare",
+       x = "Study Year",
+       y = "Median Price",
+       color = "Region")
 
 ```
 
