--- a/lab-4-student.qmd
+++ b/lab-4-student.qmd
@@ -225,4 +225,6 @@ summary(reg_mod1)
 
 **9. Using the output from `summary()`, write out the estimated regression line (recall: $y = mx + b$).**
 
+y = 0.001389x + 200 (estimate)
+
 **10. Do you have evidence to conclude there is a relationship between the median household income and the median weekly cost of center-based childcare for infants in California? Cite values from your `summary()` output to support your claim!**
