--- a/lab-4-student.qmd
+++ b/lab-4-student.qmd
@@ -228,3 +228,5 @@ summary(reg_mod1)
 y = 0.001389x + 200 (estimate)
 
 **10. Do you have evidence to conclude there is a relationship between the median household income and the median weekly cost of center-based childcare for infants in California? Cite values from your `summary()` output to support your claim!**
+
+Based on a p-value of 2.2e-16 evaluated at the .05 significance level there is significant evidence to suggest a relationship between the median household income and the median weekly cost of center-based childcare for infants in California.
